# agentic-ai-course

./: .gitignore  README.md  bedrock-mantle-sonnet5-inference-policy.json  course.toml  coursectl.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: course-ci.yml
course/: README.md  progress.example.toml
course/instructor/: README.md
course/instructor/templates/: ai-review-request.md  gate-decision.md  holdout-run-record.md  mentor-session-record.md  pilot-observation.md  release-record.md  technical-defense-record.md
course/modules/m00/: README.md  inaccurate-repository-summary.md
course/modules/m01/: README.md  setup_conflict_lab.py
course/modules/m02/: README.md
course/modules/m02/lab/: README.md  pyproject.toml
course/modules/m02/lab/acceptance_tests/: test_acceptance.py
course/modules/m02/lab/src/ticket_rules/: __init__.py  rules.py
course/modules/m02/lab/tests/: test_rules.py
course/modules/m03/: README.md
course/modules/m04/: README.md
course/modules/m05/: README.md
course/modules/m06/: README.md
course/modules/m07/: README.md
course/modules/m08/: README.md
course/modules/m09/: README.md
course/modules/m10/: README.md
course/modules/m11/: README.md
course/modules/m12/: README.md
course/modules/m13/: README.md
course/modules/m14/: README.md
course/modules/m15/: README.md
course/modules/m16/: README.md
course/modules/m17/: README.md
course/modules/m18/: README.md
course/modules/m19/: README.md
course/modules/m20/: README.md
course/modules/m21/: README.md
course/modules/m22/: README.md
course/modules/m23/: README.md
course/modules/m24/: README.md
course/modules/m25/: README.md
course/modules/m26/: README.md
course/modules/m27/: README.md
course/projects/p01-model-api-behavior-lab/starter/: pyproject.toml
course/projects/p01-model-api-behavior-lab/starter/src/model_api_lab/: __main__.py  cli.py  data.py  evaluate.py  experiment.py  models.py  normalize.py  prompting.py  providers.py
course/projects/p01-model-api-behavior-lab/starter/tests/: test_data.py  test_experiment.py  test_normalize.py
course/projects/p02-typed-intake-normalizer/: README.md  weak-schema-review.md
course/projects/p02-typed-intake-normalizer/starter/: README.md  pyproject.toml
course/projects/p02-typed-intake-normalizer/starter/src/intake_normalizer/: __init__.py  __main__.py  cli.py  data.py  models.py  pipeline.py  policy.py  prompting.py  provider.py
course/projects/p02-typed-intake-normalizer/starter/tests/: test_data.py  test_models.py  test_offline.py  test_pipeline.py  test_policy.py
course/projects/p03-operations-tool-agent/: README.md  broken-agent-loop-review.md
course/projects/p03-operations-tool-agent/starter/: README.md  pyproject.toml
course/projects/p03-operations-tool-agent/starter/src/operations_agent/: __init__.py  __main__.py  agent.py  cli.py  data.py  model.py  models.py  tools.py
course/projects/p03-operations-tool-agent/starter/tests/: test_agent.py  test_data.py  test_model.py  test_tools.py
course/projects/p04-eval-driven-issue-triage/: README.md  leaky-experiment-report.md
course/projects/p04-eval-driven-issue-triage/starter/: .gitignore  README.md  pyproject.toml
course/projects/p04-eval-driven-issue-triage/starter/src/issue_triage/: __init__.py  __main__.py  cli.py  context.py  data.py  evaluate.py  models.py  ownership.py  retrieval.py  triage.py
course/projects/p04-eval-driven-issue-triage/starter/tests/: test_data.py  test_evaluate.py  test_ownership.py  test_retrieval.py
course/projects/p05-asynchronous-agent-job-service/starter/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
course/projects/p05-asynchronous-agent-job-service/starter/src/job_service/: __init__.py  __main__.py  app.py  cli.py  config.py  database.py  domain.py  errors.py  progress.py  provider.py  repository.py  runner.py  service.py
course/projects/p05-asynchronous-agent-job-service/starter/tests/: conftest.py  test_api.py  test_architecture.py  test_docker_services.py  test_domain.py  test_progress.py  test_provider.py  test_repository.py  test_service.py
course/projects/p06-durable-release-readiness-workflow/starter/: .env.example  .gitignore  README.md  pyproject.toml
course/projects/p06-durable-release-readiness-workflow/starter/src/release_workflow/: __init__.py  __main__.py  cli.py  data.py  models.py  policy.py  reviewer.py  sink.py  workflow.py
course/projects/p06-durable-release-readiness-workflow/starter/tests/: conftest.py  test_architecture.py  test_models.py  test_policy.py  test_sink.py  test_workflow.py
course/projects/p07-github-workflow-mcp-service/starter/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
course/projects/p07-github-workflow-mcp-service/starter/src/github_workflow_mcp/: __init__.py  __main__.py  cli.py  data.py  errors.py  factory.py  github.py  models.py  server.py  store.py  webhook.py
course/projects/p07-github-workflow-mcp-service/starter/tests/: conftest.py  test_architecture.py  test_fixture_gateway.py  test_github_http.py  test_models.py  test_server.py  test_store.py  test_webhook.py
course/projects/p08-capstone-studio/: README.md  (+1 more)
course/projects/p08-capstone-studio/starter/: .gitignore  README.md  pyproject.toml
course/projects/p08-capstone-studio/starter/src/capstone_studio/: __init__.py  cli.py  data.py  models.py  validator.py
course/projects/p08-capstone-studio/starter/tests/: conftest.py  test_models.py  test_validator.py
course/templates/: ai-work-log.md
docs/: continuous-integration.md  course-specification.md  curriculum-roadmap.md  implementation-status.md  instructor-handbook.md  project-sequence.md  reference-catalog.md  release-checklist.md
scratch/: bedrock_prompt_cache_demo.py
scripts/: __init__.py  validate_course.py  verify_module_references.py  verify_reference.py
tests/: test_coursectl.py  test_pydanticai.py  test_validate_course.py
work/p01/: .env.example  PROJECT.md  README.md  flawed-comparison-report.md  pyproject.toml
(+194 files in other folders)
