[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-api-behavior-lab"
version = "0.1.0"
description = "A controlled comparison of OpenAI and Anthropic API behavior"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "openai",
]

[project.scripts]
model-api-lab = "model_api_lab.cli:main"

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/model_api_lab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
