[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typed-intake-normalizer"
version = "0.1.0"
description = "A typed and failure-aware service-request normalization pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "pydantic",
]

[project.scripts]
intake-normalizer = "intake_normalizer.cli:main"

[dependency-groups]
dev = ["pyright", "pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/intake_normalizer"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
