[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operations-tool-agent"
version = "0.1.0"
description = "A hand-built, tool-using operations agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openai", "pydantic"]

[project.scripts]
operations-agent = "operations_agent.cli:main"

[dependency-groups]
dev = ["pyright", "pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/operations_agent"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
