[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-driven-issue-triage"
version = "0.1.0"
description = "An evaluation-driven GitHub issue triage engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openai", "pydantic"]

[project.scripts]
issue-triage = "issue_triage.cli:main"

[dependency-groups]
dev = ["pyright", "pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/issue_triage"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
