[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asynchronous-agent-job-service"
version = "0.1.0"
description = "A durable FastAPI job service around an LLM boundary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite",
  "asyncpg",
  "fastapi",
  "greenlet",
  "openai",
  "redis",
  "sqlalchemy",
  "uvicorn",
]

[project.scripts]
job-service = "job_service.cli:main"

[dependency-groups]
dev = ["asgi-lifespan", "httpx", "pyright", "pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/job_service"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["docker: requires PostgreSQL and Redis development services"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
