[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capstone-studio"
version = "0.1.0"
description = "Proposal and portfolio evidence validation for an LLM engineering capstone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.10,<3"]

[project.scripts]
capstone-studio = "capstone_studio.cli:main"

[dependency-groups]
dev = ["pyright", "pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/capstone_studio"]

[tool.hatch.build.targets.sdist]
include = ["src/capstone_studio", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
